feat: :sparkles: 添加 swagger 接口文档

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,16 @@
 # development
+
+#  set node env
+NODE_ENV=development
+
+# set swagger doc
+
+# Swagger Api文档访问路径
+SWAGGER_SETUP_PATH=api-docs
+# title and descripiton
+SWAGGER_UI_TITLE=宠爱到家(珂赛特)接口文档
+SWAGGER_UI_TITLE_DESC=宠爱到家(珂赛特)是一款现代宠物相关的应用程序
+# api version
+SWAGGER_API_VERSION=1.0
+# swagger prefix
+SWAGGER_ENDPOINT_PREFIX=api/v1
