feat: :sparkles: 添加使用过滤器优雅地统一处理响应体

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,13 @@
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
+    "esModuleInterop": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@/*": ["src/*"]
+  }
   }
 }
