--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/testing": "^10.0.0",
+    "dayjs": "^1.11.13",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
