feat: :sparkles: 使用Prisma连接mysql
1.安装prisma
2.配置Dockerfile
3.配置docker-compose

BREAKING CHANGE: 1.同步数据库的时候要使用npx prisma db push
2.或者迁移数据库，但是会形成迁移文件

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,19 +16,23 @@ services:
     depends_on:
       - mysql
       - redis
+    env_file:
+      - ./prisma/.env
 
   mysql:
     container_name: mysql
     image: mysql:8
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    ports:
+      - '3306:3306'
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=wanlum
+      - MYSQL_ROOT_PASSWORD=Y349^&84dk4Hwe
       - MYSQL_DATABASE=cosette-database
     networks:
       - cosette-net
     volumes:
-      - mysql:/var/lib/mysql
+      - ./prisma/data:/var/lib/mysql
 
   redis:
     container_name: redis
