--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 /node_modules
 /build
 
+# Prisma generated
+/prisma/data/**
+
 # Logs
 logs
 *.log
@@ -36,11 +39,9 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+# .env
+# .env.development
+# .env.production
 
 # temp directory
 .temp
@@ -54,3 +55,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
