--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/testing": "^10.0.0",
+    "@prisma/client": "^5.22.0",
     "dayjs": "^1.11.13",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -52,6 +53,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "prisma": "^5.22.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
