fix: :bug: 修改docker-compose中env的路径

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - mysql
       - redis
     env_file:
-      - ./prisma/.env
+      - ./.env
 
   mysql:
     container_name: mysql
