--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # development
 
-DATABASE_URL="mysql://root:Y349^&84dk4Hwe@localhost:3306/cosette-database"
+DATABASE_URL="postgresql://root:root@localhost:5432/cosette-database"
