--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,53 +1,71 @@
 version: "3.9"
 
 services:
-  
-  servers:
+  # PostgreSQL 数据库
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: cosette_database
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - cosette-net
+
+  # Redis 缓存
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    restart: always
+    volumes:
+      - redis_data:/data
+    networks:
+      - cosette-net
+
+  # NestJS 应用
+  server:
     build:
       context: ./
       dockerfile: ./Dockerfile
+    container_name: server
+    image: server:latest
     restart: always
     ports:
-      - 3000:3000
+      - "3000:3000"
     networks:
       - cosette-net
-    volumes:
-      - upload:/upload
     depends_on:
-      - mysql
+      - postgres
       - redis
     env_file:
       - ./.env
 
-  mysql:
-    container_name: mysql
-    image: mysql:8
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+  # Nginx 反向代理
+  nginx:
+    image: nginx:stable-alpine
+    container_name: nginx
     ports:
-      - '3306:3306'
-    restart: always
-    environment:
-      - MYSQL_ROOT_PASSWORD=Y349^&84dk4Hwe
-      - MYSQL_DATABASE=cosette-database
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    privileged: true
+    depends_on:
+      - server
     networks:
       - cosette-net
-    volumes:
-      - ./prisma/data:/var/lib/mysql
-
-  redis:
-    container_name: redis
-    image: redis:latest
-    restart: always
-    networks:
-      - cosette-net
-    volumes:
-      - redis:/data
 
 networks:
   cosette-net:
     driver: bridge
 
 volumes:
-  mysql:
-  redis:
-  upload:
+  postgres_data:
+    driver: local
+  redis_data:
+    driver: local
