--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,9 +49,9 @@ services:
   # Nginx 反向代理
   nginx:
     image: nginx:stable-alpine
-    container_name: nginx
+    container_name: proxy
     ports:
-      - "80:80"
+      - "5000:5000"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     privileged: true
