--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "semi": false,
+  "trailingComma": "es5",
   "tabWidth": 2,
-  "printWidth": 100
+  "printWidth": 80,
+  "endOfLine": "auto"
 }
