--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@fastify/static": "^7.0.4",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.4.15",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/swagger": "^8.0.7",
+    "@nestjs/swagger": "^8.1.0",
     "@nestjs/testing": "^10.0.0",
     "@prisma/client": "^6.0.1",
     "dayjs": "^1.11.13",
+    "fastify": "^5.2.0",
+    "fastify-swagger": "^5.1.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
